@@ -1,5 +1,11 @@
 2.1.0:
 
+Mon Mar 21 15:52:53 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>
+
+ - tripplite.c: fix the reporting of the battery voltage and charge
+
+   (Andrew Cook, Nicholas J. Kain) [Alioth Patch #301271]
+
 Fri Mar 18 13:36:20 UTC 2005 / Arnaud Quette <arnaud.quette@mgeups.com>
 
  - driver.list: add the missing Powerware 5119 RM (genericups type=20)
